log
Thu May  5 02:53:04 UTC 2022: 
 heap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
fe4d624
Thu May  5 02:59:13 UTC 2022: 
 heap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
22895ea
Thu May  5 03:05:45 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
23189ec
Thu May  5 03:06:44 UTC 2022: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
3f26377
Thu May  5 03:07:10 UTC 2022: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|4
total_score: 0/70
3da3b96
Thu May  5 03:18:59 UTC 2022: 
 heap.c | 19 ++++++++++++-------
 1 file changed, 12 insertions(+), 7 deletions(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:22:7: error: variable ‘posPrioridad’ set but not used [-Werror=unused-but-set-variable]
   int posPrioridad = 0;
       ^~~~~~~~~~~~
heap.c: In function ‘createHeap’:
heap.c:51:20: error: statement with no effect [-Werror=unused-value]
   new->heapArray[0].data
   ~~~~~~~~~~~~~~~~~^~~~~
heap.c:53:4: error: expected ‘;’ before ‘return’
    return new;
    ^~~~~~
heap.c:54:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
e954f53
Thu May  5 03:19:18 UTC 2022: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:0:
heap.c: In function ‘createHeap’:
heap.c:53:20: error: statement with no effect [-Werror=unused-value]
   new->heapArray[0].data
   ~~~~~~~~~~~~~~~~~^~~~~
heap.c:55:4: error: expected ‘;’ before ‘return’
    return new;
    ^~~~~~
heap.c:56:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
8a214e2
Thu May  5 03:19:26 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6010900
Thu May  5 03:21:20 UTC 2022: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
f7a3eaf
